@@ -217,4 +217,5 @@ $HTTP["cookie"] =~ "empty-ref" {
 
 $HTTP["host"] == "etag.example.org" {
     static-file.etags = "disable"
+    compress.filetype = ()
 }
